--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://65.0.205.255:9000/projects</sonar.host.url>
+		<sonar.host.url>http://65.0.205.255:9000/</sonar.host.url>
 		<sonar.login>squ_fb1bd2776d7a3a9e119e9e40b1248116ac626bdc</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
